@@ -98,6 +98,12 @@
                 <xsl:value-of select="concat(@prefix,'Uniqueid')"/>
             </xsl:attribute>
         </xsl:element>
+        <xsl:element name="parameter">
+            <xsl:attribute name="name">
+                <xsl:value-of select="concat(@prefix,'Linkedid')"/>
+            </xsl:attribute>
+            <para>Uniqueid of the oldest channel associated with this channel.</para>
+        </xsl:element>
     </xsl:template>
 
     <xsl:template match="bridge_snapshot">
